name:                AdventOfCode2017
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/AdventOfCode2017#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Common
                     , Day01
                     , Day02
                     , Day03
                     , Day04
                     , Day05
                     , Day06
                     , Day07
                     , Day08
                     , Day09
                     , Day10
                     , Day11
                     , Day12
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , split
                     , parsec
                     , filepath
                     , directory
                     , mtl
                     , transformers
                     , either
  default-language:    Haskell2010
 --
executable AdventOfCode2017-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N 
  build-depends:       base
                     , AdventOfCode2017
                     , directory
  default-language:    Haskell2010

test-suite AdventOfCode2017-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , AdventOfCode2017
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/AdventOfCode2017
